# Vision2Step

v2s_0.1.1/: CHANGELOG.md  README.md  pyproject.toml
v2s_0.1.1/docs/: architecture.md  roadmap.md
v2s_0.1.1/src/vision2step/: __init__.py  __main__.py  analyzer.py  cli.py  errors.py  geometry_hints.py  models.py
v2s_0.1.1/src/vision2step/prompts/: __init__.py  vision_analyzer.md
v2s_0.1.1/tests/: __init__.py  test_analyzer.py  test_geometry_hints.py  test_models.py
vision2step-0.2.7/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
vision2step-0.2.7/docs/: architecture.md  cad-builder.md  roadmap.md
vision2step-0.2.7/examples/: README.md  illustrative_analysis.json
vision2step-0.2.7/examples/cutting_board/: README.md  analysis.json  metrics.json  model.py  model.step
vision2step-0.2.7/src/vision2step/: __init__.py  analyzer.py  artifact_tools.py  build_workflow.py  builder.py  cad_execution.py  cad_mcp_client.py  cad_mcp_server.py  cad_runner.py  cli.py  errors.py  geometry_hints.py  image_input.py  models.py  runtime_environment.py  source_policy.py
vision2step-0.2.7/src/vision2step/prompts/: cad_builder.md
vision2step-0.2.7/tests/: helpers.py  test_analyzer.py  test_artifact_tools.py  test_build_workflow.py  test_builder.py  test_cad_execution.py  test_cad_runner.py  test_cli.py  test_image_input.py  test_models.py  test_runtime_environment.py  test_source_policy.py
vision2step-0.2.7/tests/fixtures/: simple_box.py
