[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "vision2step"
version = "0.2.7"
description = "A Claude workflow that converts reference images into validated STEP solids."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kaan Karagoz" }]
keywords = ["claude", "computer-vision", "cad", "step", "cadquery"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "anthropic>=0.77.0,<1",
  "pillow>=10.4,<13",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
cad = [
  "cadquery>=2.5,<3",
  "mcp>=1.26,<2",
]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
vision2step = "vision2step.cli:main"
vision2step-cad-mcp = "vision2step.cad_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vision2step"]

[tool.hatch.build.targets.wheel.force-include]
"src/vision2step/prompts/vision_analyzer.md" = "vision2step/prompts/vision_analyzer.md"
"src/vision2step/prompts/cad_builder.md" = "vision2step/prompts/cad_builder.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vision2step"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
